fixed spacing

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -124,6 +124,10 @@
   {
     font-weight: bold;
   }
-  .ab { display: inline-block; width: 100px; }
+  .abb 
+  { 
+    display: inline-block; 
+    width: 250px;
+   }
 
 
